# metasplit

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
metasplit/: __init__.py  __main__.py  bin.py  core.py  errors.py
tests/: fixtures.py  test_core.py  test_integrations.py
